# vc-signal

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  server.py  web.py
api/: index.py
src/: models.py
src/scoring/: thesis_scorer.py
src/sources/: __init__.py  github_trending.py  hackernews.py  producthunt.py  rss_feeds.py
static/css/: style.css
